vlib/v/checker/tests/inc_dec_fun_call.vv
fn foo() int {
	return 100
}

foo()--
